Fixed width on mobile devices

--- a/index.html
+++ b/index.html
@@ -1087,7 +1087,7 @@
 												<div id="mc_embed_signup" style="background: #fff;
 														clear: left;
 														font: 14px Helvetica, Arial, sans-serif;
-														width: 600px;">
+														width: 100%;">
 													<form action="https://rocketway.us10.list-manage.com/subscribe/post?u=bf2d8c52c1254828a87cc0727&amp;id=85ff0cb914&amp;f_id=00fb29e2f0"
 														  method="post" id="mc-embedded-subscribe-form"
 														  name="mc-embedded-subscribe-form" class="validate"
@@ -1311,7 +1311,7 @@
 							</tr>
 						</table><!-- End Space -->
 
-						<img src="/images/road map graphic.png" style="width:600px; display:block; margin-left: auto; margin-right:auto">
+						<img src="/images/road map graphic.png" style="width:100%; max-width:600px; display:block; margin-left: auto; margin-right:auto">
 
 						<!-- Space -->
 						<table width="100%" border="0" cellpadding="0" cellspacing="0" align="center" class="full">
