--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
 	<title>TimeBuilders.Club</title>
 	<link rel="stylesheet" href="/css/home.css">
-
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8881768155722325"
+     crossorigin="anonymous"></script>
 
 </head>
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
