--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 	<link rel="stylesheet" href="/css/home.css">
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8881768155722325"
      crossorigin="anonymous"></script>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-B7PSKRPK2C"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-B7PSKRPK2C');
+	</script>
 
 </head>
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
