Added Cookies info... because that's a thing I guess...

--- a/index.html
+++ b/index.html
@@ -1468,5 +1468,17 @@
 	</tr>
 </table><!-- Footer -->
 
+<div id="cookiesButton">
+	Cookies Info
+</div>
+<div id="cookiesTooltip">
+	<p>This site uses cookies for marketing, performance monitoring, and to ensure that you get the best experience on our site.
+	If you do not wish for cookies to be used, please disable cookies in your web browser.
+		<span id="closeTooltip">[close]</span></p>
+</div>
+
 </body>
+<footer>
+	<script src="/js/cookies_info.js"></script>
+</footer>
 </html>
