Added Meta tags to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
-	<title>TimeBuilders.Club</title>
+	<title>Build Flight Time by Flying with other Pilots near you | TimeBuildersClub</title>
+	<meta name="description" content="Time Builders Club connects you with other pilots near you that want to share airplane rentals and build flight time cheaper and faster. Fly with peers today!">
+	<meta name="keywords" content="flight time, atp hours, airplane rental, flying jobs, pilot experience, get hired by airlines">
+	<meta name="robots" content="index, follow">
+	<meta name="copyright" content="Niqy LLC 2022">
+	<meta name="language" content="EN">
+	<meta name="rating" content="general">
 	<link rel="stylesheet" href="/css/home.css">
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8881768155722325"
      crossorigin="anonymous"></script>
